test/tests/errors/error-if-exp-ref-off3.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = true ? ref "" : (true ? 1 : ref 1);
}